# chained-serverless-invoker

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  results.ipynb
.github/workflows/: compliance.yaml
chained_serverless_invoker/: __init__.py  client.py  config.py  constants.py  http_invoker.py  invoker.py  pubsub_invoker.py
chained_serverless_invoker/invokers/: __init__.py  abstract_invoker.py  http_invoker.py  invoker.py  pubsub_invoker.py
invoker/: README.md
invoker/chained_serverless_invoker/: __init__.py  client.py  constants.py
invoker/chained_serverless_invoker/invokers/: __init__.py  abstract_invoker.py  http_invoker.py  pubsub_invoker.py  types.py
invoker/tests/: conftest.py  test_invoke_edge.py
middleware/: README.md  cli.py  pyproject.toml
middleware/serverless_tuner_middleware/: __init__.py  baseline.py  baseline_summary.json  clean_csv_headers.py  cli.py  config.py  constants.py  critical_path.py  csv_summary.py  logs.py  model.py  normalize_benchmarks.py  rewrite.py  stats.py  utils.py
middleware/serverless_tuner_middleware/csv/: 1_cpu_1_gb_ram_ea1_to_ea1_http_latency_results.csv  2_cpu_2_gb_ram_ea1_to_ea1_http_latency_results.csv  2_cpu_2_gb_ram_ea1_to_we1_http_latency_results.csv  2cpu_2gb_ea1_to_ea1_pubsub_latency_results.csv  2cpu_2gb_ea1_to_we1_pubsub_latency_results.csv  ea1_to_ea1_pubsub_latency_results.csv  ea1_to_we1_http_latency_results.csv  ea1_to_we1_pubsub_latency_results.csv  latency_samples.csv
middleware/serverless_tuner_middleware/dag/: graph.py
results/tts/: analyze_logs.py  invoker_config.ndjson  invoker_config_cli_newmodel.ndjson  invoker_config_cli_tuned.ndjson  invoker_config_model_tuned.ndjson  invoker_config_tuned.ndjson
scripts/: compliance.sh
tests/: conftest.py  test_client.py  test_middleware.py
tests/invoker/: test_client.py
tests/middleware/: test_middleware.py
